--- a/project_backend/src/main/resources/application.properties
+++ b/project_backend/src/main/resources/application.properties
@@ -1,7 +1,18 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/project
-spring.datasource.username=root
-spring.datasource.password=1234
-s3.key.access=${ACCESS_KEY}
-s3.key.secret=${SECRET_KEY}
-s3.bucket.endpoint=${ENDPOINT}
-s3.bucket.region=${REGION}
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
+
+s3.key.access=
+s3.key.secret=
+s3.bucket.endpoint=
+s3.bucket.region=
+
+spring.mail.host=
+spring.mail.port=0
+spring.mail.username=
+spring.mail.password=
+spring.mail.properties.mail.smtp.auth=
+spring.mail.properties.mail.smtp.starttls.enable=
+spring.mail.properties.mail.smtp.starttls.required=
+spring.mail.properties.mail.ssl.protocols=
+spring.mail.properties.mail.ssl.trust=
